samples/_failures_safe/1761623713_81d179_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baa98242.c: In function ‘main’:
./samples/SAFE/__tmp_baa98242.c:156:19: error: expected ‘;’ at end of input
  156 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_baa98242.c:156:13: error: expected declaration or statement at end of input
  156 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_baa98242.c:156:13: error: expected declaration or statement at end of input
